001-roman-numerals-converter/cf-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: 'AWS CloudFormation Sample Template UpdateTutorial Part 5: Sample template
  that can be used to test EC2 updates convert a single instance deployment into an
  Auto Scaled, Load Balanced solutio. **WARNING** This template creates an Amazon
  Ec2 Instance. You will be billed for the AWS resources used if you create a stack
  from this template.'

Parameters:
  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the instance
    Type: 'AWS::EC2::KeyPair::aws2'
Resources:
  MyEC2Instance: #An inline comment
    Type: "AWS::EC2::Instance"
    Properties: 
      ImageId: "ami-0ff8a91507f77f867" #Another comment -- This is a Linux AMI
      InstanceType: t2.micro
      SecurityGroups:
        -!Ref InstanceSecurityGroup
        - MyExistingSecurityGroup
      KeyName: -!Ref KeyName
      AvailabilityZone: "us-east-1a"
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH access via port 22 and http via port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: HTTP  
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
    
    UserData: 
      "Fn::Base64":
         !Sub | 
            #!/bin/bash
            yum update -y
            yum install python3 -y
            pip3 install -y
            wget -P templates.....
            wget -P templates.....
            wget app.py
            pyhton3 app.py


Outputs:
    Description: Information about the Value
    Value: !Sub http://${Ec2Instance.DNSName}
